--- a/stream-two.html
+++ b/stream-two.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
       <ul>
-           <li><a href="stream-one.html">One</a></li>
+           <li><a href="index.html">One</a></li>
            <li><a href="stream-two.html">Two</a></li>
            <li><a href="stream-three.html">Three</a></li>
       </ul>
